--- a/api.yml
+++ b/api.yml
@@ -7,9 +7,10 @@ servers:
   - url: http://api.simplyappointments.com/v1
   
 paths:
-    /user:
+    /users:
       post:
         description: Create user
+        operationId: createUser
         requestBody:
           required: true
           content:
@@ -21,9 +22,23 @@ paths:
             description: User created
           '400':
             description: Bad request
-    /user/login:
+      get:
+        description: Get list of users
+        responses:
+          '200':
+            description: List of users
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/User'
+          '404':
+              $ref: '#/components/responses/NotFound'
+    /users/login:
        post:
         description: Login user
+        operationId: loginUser
         requestBody:
           content:
             application/json:
@@ -43,6 +58,99 @@ paths:
                   type: string
           '404':
             $ref: '#/components/responses/NotFound'
+    /users/otp:
+       patch:
+        description: create a one time password for user
+        operationId: createOTP
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                    format: email
+        responses:
+          '200':
+            description: OK
+          '404':
+            $ref: '#/components/responses/NotFound'
+    /users/validate-otp:
+        post:
+          description: validate one time password for user
+          operationId: validateOTP
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      format: email
+                    otp:
+                      type: string
+          responses:
+            '200':
+              description: OK
+              headers:
+                X-Authorization:
+                  schema:
+                    type: string
+            '404':
+              $ref: '#/components/responses/NotFound'
+    /users/{userId}:
+          parameters:
+            - in: path
+              name: userId
+              schema:
+                type: string
+              required: true
+              description: The user ID
+          get:
+            description: Get user
+            operationId: getUser
+            security:
+              - bearerAuth: []
+            responses:
+              '200':
+                description: User
+                content:
+                  application/json:
+                    schema:
+                      $ref: '#/components/schemas/User'
+              '404':
+                $ref: '#/components/responses/NotFound'
+              '403':
+                $ref: '#/components/responses/NotAuthorized'
+              '409' : 
+                $ref: '#/components/responses/Conflict'
+          patch:
+            description: Update user
+            operationId: updateUser
+            security:
+              - bearerAuth: []
+            requestBody:
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/User'
+            responses:
+              '200':
+                description: OK
+              '404':
+                $ref: '#/components/responses/NotFound'
+              '403':
+                $ref: '#/components/responses/NotAuthorized'
+              '409' : 
+                $ref: '#/components/responses/Conflict'
+        
+
+      
+         
+
+
   
     
 
@@ -60,7 +168,7 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ProblemDetail'
-     Notauthorized:
+     NotAuthorized:
       description: Access token can't access the resource
       content:
         application/json:
