--- a/api.yml
+++ b/api.yml
@@ -7,35 +7,6 @@ servers:
   - url: http://api.simplyappointments.com/v1
   
 paths:
-    /users:
-      post:
-        description: Create user
-        operationId: createUser
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        responses:
-          '201':
-            description: User created
-          '400':
-            description: Bad request
-      get:
-        description: Get list of users
-        responses:
-          '200':
-            description: List of users
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/User'
-          '404':
-              $ref: '#/components/responses/NotFound'
-
     /users/login:
        post:
         description: Login user
@@ -104,6 +75,93 @@ paths:
             '404':
               $ref: '#/components/responses/NotFound'
 
+    /user/customer:
+         post:
+           description: Register a new customer
+           operationId: registerCustomer
+           requestBody:
+               content:
+                  application/json:
+                     schema:
+                       $ref: '#/components/schemas/User'
+           responses:
+             '201':
+               description: customer resgistered successfully
+             '400':
+                $ref: '#/components/responses/BadRequest'
+             '409' : 
+                $ref: '#/components/responses/Conflict'
+         get: 
+              description: Get list of customers
+              operationId: getCustomers
+              security:
+                - bearerAuth: []
+              responses:
+                '200':
+                  description: List of customers
+                  content:
+                    application/json:
+                      schema:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/User'
+                '404':
+                  $ref: '#/components/responses/NotFound'
+                '403':
+                  $ref: '#/components/responses/NotAuthorized'
+
+    /user/staff:
+         post:
+           description: Register a new staff
+           operationId: registerStaff
+           requestBody:
+               content:
+                  application/json:
+                     schema:
+                       $ref: '#/components/schemas/User'
+           responses:
+             '201':
+               description: staff resgistered successfully
+             '400':
+                $ref: '#/components/responses/BadRequest'
+             '409' : 
+                $ref: '#/components/responses/Conflict'
+         get:
+              description: Get list of staffs
+              operationId: getStaffs
+              security:
+                - bearerAuth: []
+              responses:
+                '200':
+                  description: List of staffs
+                  content:
+                    application/json:
+                      schema:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/User'
+                '404':
+                  $ref: '#/components/responses/NotFound'
+                '403':
+                  $ref: '#/components/responses/NotAuthorized'
+
+    /users/admin:
+         post:
+           description: Register a new admin
+           operationId: registerAdmin
+           requestBody:
+               content:
+                  application/json:
+                     schema:
+                       $ref: '#/components/schemas/User'
+           responses:
+             '201':
+               description: admin resgistered successfully
+             '400':
+                $ref: '#/components/responses/BadRequest'
+             '409' : 
+                $ref: '#/components/responses/Conflict'
+
     /users/{userId}:
           parameters:
             - $ref: '#/components/parameters/UserIdParam'
@@ -135,6 +193,20 @@ paths:
                 application/json:
                   schema:
                     $ref: '#/components/schemas/User'
+            responses:
+              '200':
+                description: OK
+              '404':
+                $ref: '#/components/responses/NotFound'
+              '403':
+                $ref: '#/components/responses/NotAuthorized'
+              '409' : 
+                $ref: '#/components/responses/Conflict'
+          delete:
+            description: Delete user
+            operationId: deleteUser
+            security:
+              - bearerAuth: []
             responses:
               '200':
                 description: OK
@@ -292,6 +364,45 @@ paths:
               '403':
                 $ref: '#/components/responses/NotAuthorized'
               '409' : 
+                $ref: '#/components/responses/Conflict'
+
+    /staffs:
+        get:
+          description: Get list of staffs
+          operationId: getStaffs
+          security:
+            - bearerAuth: []
+          responses:
+            '200':
+              description: List of staffs
+              content:
+                application/json:
+                  schema:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/User'
+            '404':
+              $ref: '#/components/responses/NotFound'
+            '403':
+              $ref: '#/components/responses/NotAuthorized'
+        post:
+            description: Create staff
+            operationId: createStaff
+            security:
+              - bearerAuth: []
+            requestBody:
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/User'
+            responses:
+              '201':
+                description: OK
+              '404':
+                $ref: '#/components/responses/NotFound'
+              '403':
+                $ref: '#/components/responses/NotAuthorized'
+              '409':
                 $ref: '#/components/responses/Conflict'
     
     /appointments:
