--- a/api.yml
+++ b/api.yml
@@ -513,7 +513,56 @@ paths:
                   '403':
                     $ref: '#/components/responses/NotAuthorized'
 
+    /staff/{staffid}/appointment:
+        get:
+          description: Get staff appointments
+          operationId: getStaffAppointments
+          security:
+            - bearerAuth: []
+          responses:
+            '200':
+              description: List of staff appointments
+              content:
+                application/json:
+                  schema:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Appointment'
+            '404':
+              $ref: '#/components/responses/NotFound'
+            '403':
+              $ref: '#/components/responses/NotAuthorized'
+
+  
+    /staff/{staffid}/appointment/{appointmentid}:
+            patch:
+              description: change appointment status
+              operationId: updateAppointmentStatus
+              security:
+                - bearerAuth: []
+              requestBody:
+                content:
+                  application/json:
+                    schema:
+                      type: object
+                      properties:
+                        status:
+                          type: string
+                          enum: 
+                            - pending
+                            - completed
+                            - paid
+              responses:
+                '200':
+                  description: OK
+                '404':
+                  $ref: '#/components/responses/NotFound'
+                '403':
+                  $ref: '#/components/responses/NotAuthorized'
+              
+
       
+
         
 components:
   securitySchemes:
