--- a/api.yml
+++ b/api.yml
@@ -607,7 +607,7 @@ paths:
         parameters:
             - $ref: "#component/parameter/UserIdParam"
         get:
-            description: Get Customer
+            description: Get single customer
             operationId: getCustomer
             security:
                 - bearerAuth: []
@@ -625,6 +625,29 @@ paths:
                     $ref: "#/components/responses/NotAuthorized"
                 "409":
                     $ref: "#/components/responses/Conflict"
+
+    /user/appointment:
+        get:
+            description: Get all user appointments
+            operationId: getAllAppointment
+            security:
+                - bearerAuth: []
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/Appointment"
+            parameters:
+                - $ref: "#/components/parameters/SkipParam"
+                - $ref: "#/components/parameters/LimitParam"
+                - $ref: "#/components/parameters/AppointmentStatusParam"
+            responses:
+                "200":
+                    description: "ok"
+                "401":
+                    $ref: "#/components/responses/NotAuthenticated"
+                "403":
+                    $ref: "#/components/responses/NotAuthorized"
 
 components:
     securitySchemes:
