--- a/api.yml
+++ b/api.yml
@@ -491,11 +491,11 @@ paths:
             responses:
                 "200":
                     description: OK
-                  '404':
+                '404':
                     $ref: '#/components/responses/NotFound'
-                  '403':
+                '403':
                     $ref: '#/components/responses/NotAuthorized'
-          patch:
+        patch:
                 description: Update service
                 operationId: updateService
                 security:
@@ -531,7 +531,7 @@ paths:
             '404':
               $ref: '#/components/responses/NotFound'
             '403':
-              $ref: '#/components/responses/NotAuthorized
+              $ref: '#/components/responses/NotAuthorized'
     /staff/{staffid}/appointment/{appointmentid}:
         patch:
             description: change appointment status
