--- a/api.yml
+++ b/api.yml
@@ -654,6 +654,45 @@ paths:
         "403":
           $ref: "#/components/responses/NotAuthorized"
 
+  /notification:
+     post:
+       description: Send notification
+       operationId: sendNotification
+       security:
+         - bearerAuth: []
+       requestBody:
+         content:
+           application/json:
+             schema:
+               $ref: "#/components/schemas/Notification"
+       responses:
+         "200":
+           description: OK
+         "404":
+           $ref: "#/components/responses/NotFound"
+         "403":
+           $ref: "#/components/responses/NotAuthorized"
+         "409":
+           $ref: "#/components/responses/Conflict"
+     get:
+         description: Get notifications
+         operationId: getNotifications
+         security:
+           - bearerAuth: []
+         responses:
+           "200":
+             description: OK
+             content:
+               application/json:
+                 schema:
+                   type: array
+                   items:
+                     $ref: "#/components/schemas/Notification"
+           "404":
+             $ref: "#/components/responses/NotFound"
+           "403":
+             $ref: "#/components/responses/NotAuthorized"
+       
 components:
   securitySchemes:
     bearerAuth:
@@ -863,3 +902,24 @@ components:
           type: string
           required:
             - name
+
+    Notification:
+      type: object
+      properties:
+        id:
+          type: string
+        appointmentId:
+          type: string
+        email:
+          type: string
+        sentTime:
+          type: string
+        notificationType:
+          type: string
+          enum:
+            - reminder
+            - confirmation
+            - cancellation
+            - Reschedulement
+            - Assignment
+        
