add reset and forgot password , logout

--- a/api.yml
+++ b/api.yml
@@ -31,6 +31,61 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
 
+  /users/logout:
+    post:
+      description: Logout user
+      operationId: logoutUser
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Logout successful
+        "404":
+          $ref: "#/components/responses/NotFound"
+
+  /users/forgot-password:
+    post:
+      description: Forgot password
+      operationId: forgotPassword
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  format: email
+      responses:
+        "200":
+          description: OK
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+
+  /users/reset-password:
+    post:
+      description: Reset password
+      operationId: resetPassword
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                password:
+                  type: string
+      responses:
+        "200":
+          description: OK
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+
   /users/otp:
     patch:
       description: create a one time password for user
