--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#270529",
-        "activityBar.background": "#57145b",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
+        "activityBar.background": "#270529",
+        "activityBar.foreground": "#f2f3f5",
+        "activityBar.inactiveForeground": "#f6f7f8f1",
         "activityBarBadge.background": "#bf0060",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
