--- a/api.yml
+++ b/api.yml
@@ -591,6 +591,57 @@ paths:
         "403":
           $ref: "#/components/responses/NotAuthorized"
 
+  /users/{userid}/service/{serviceid}:
+     post:
+      description: Add service to user
+      operationId: addService
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "403":
+          $ref: "#/components/responses/NotAuthorized"
+    
+     get:
+        description: Get user service
+        operationId: getUserService
+        security:
+          - bearerAuth: []
+        responses:
+          "200":
+            description:  OK
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Service"
+          "404":
+            $ref: "#/components/responses/NotFound"
+          "403":
+            $ref: "#/components/responses/NotAuthorized"
+            
+  /users/{userid}/service:
+    get:
+      description: Get user services
+      operationId: getUserServices
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: List of user services
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Service"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "403":
+          $ref: "#/components/responses/NotAuthorized"
+
   /staff/{staffid}/appointment:
     get:
       description: Get staff appointments
@@ -704,6 +755,41 @@ paths:
       responses:
         "200":
           description: OK
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "403":
+          $ref: "#/components/responses/NotAuthorized"
+
+  /users/{userid}/role/{roleid}:
+    patch:
+      description: Update user role
+      operationId: updateUserRole
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        "200":
+          description: OK
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "403":
+          $ref: "#/components/responses/NotAuthorized"
+    get:
+      description: Get user role 
+      operationId: getUserRole
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
         "404":
           $ref: "#/components/responses/NotFound"
         "403":
