--- a/api.yml
+++ b/api.yml
@@ -1108,6 +1108,8 @@ components:
         UserService:
             type: object
             properties:
+                id:
+                    type: string
                 userId:
                     type: string
                 serviceId:
